k8-manifests/k8s-servian-app.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: servian
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviantc
  namespace: default
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      deployment: serviantc
      product: serviantcapp
  template:
    metadata:
      labels:
        deployment: serviantc
        product: serviantcapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9201"
        prometheus.io/path: /metric-service/metrics
    spec:
      securityContext:
          runAsUser: 0
          runAsGroup: 0
          fsGroup: 0
      containers:
        - image: servian/techchallengeapp:latest
          name: servian
          args: ['serve']
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command: ["/bin/sh", "-c", "nc -z localhost 3000"]
            initialDelaySeconds: 120
            failureThreshold: 20
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "nc -z localhost 3000"]
            initialDelaySeconds: 120
            failureThreshold: 20
            periodSeconds: 10
          # lifecycle:
          #   preStop:
          #     exec:
          #       command: ["sh", "-c", "${CARBON_PATH}/bin/wso2server.sh stop"]
          resources:
            requests:
              memory: 64Mi
              cpu: 500m
            limits:
              memory: 400Mi
              cpu: 200m
          ports:
            - containerPort: 3000
              protocol: "TCP"
          volumeMounts:
            - name: servian
              mountPath: /TechChallengeApp/conf.toml
              subPath: conf.toml
      volumes:
        - name: servian
          configMap:
            name: servian-conf
      # serviceAccountName: servian-svc-account

---
apiVersion: v1
kind: Service
metadata:
  name: serviantc
  namespace: default
  annotations:
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: "3000"
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  selector:
    deployment: serviantc
    product: serviantcapp
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000


# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: servian
#   labels:
#     app: servian
# spec:
#   selector:
#     matchLabels:
#       app: servian
#   template:
#     metadata:
#       labels:
#         app: servian
#     spec:
#       containers:
#       - image: servian/techchallengeapp:latest
#         name: servian
#         args: ['serve']
#         ports:
#         - containerPort: 3000
#           name: servian
#         resources:
#           limits:
#             cpu: 500m
#           requests:
#             cpu: 200m
#         volumeMounts:
#           - name: servian
#             mountPath: /TechChallengeApp/conf.toml
#             subPath: conf.toml
#       volumes:
#         - name: servian
#           configMap:
#             name: servian-conf

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: servian
#   labels:
#     app: servian
# spec:
#   ports:
#     - port: 80
#       name: http
#       targetPort: 3000
#   selector:
#     app: servian
#   type: LoadBalancer



# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mgt-apim
#   namespace: wso2
#   annotations:
#     # Health Check Settings
#     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
#     alb.ingress.kubernetes.io/healthcheck-port: "8280"
#     alb.ingress.kubernetes.io/healthcheck-path: /services/Version
#     alb.ingress.kubernetes.io/backend-protocol: HTTPS
#     # Sessiong stickiness/affinity
#     alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=300
# spec:
#   selector:
#     deployment: wso2apim
#     product: allinone
#   type: NodePort
#   ports:
#     - name: servlet-http
#       protocol: TCP
#       port: 9763
#       targetPort: 9763
#     - name: servlet-https
#       protocol: TCP
#       port: 9443
#       targetPort: 9443
#     - name: amqp-transport
#       protocol: TCP
#       port: 5672
#       targetPort: 5672
#     - name: tm-throttling-data
#       protocol: TCP
#       port: 9611
#       targetPort: 9611
#     - name: tm-throttling-auth
#       protocol: TCP
#       port: 9711
#       targetPort: 9711
