k8-manifests/nginx_test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
              


---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: game-2048
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   namespace: game-2048
#   name: deployment-2048
# spec:
#   selector:
#     matchLabels:
#       app.kubernetes.io/name: app-2048
#   replicas: 5
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/name: app-2048
#     spec:
#       containers:
#       - image: alexwhen/docker-2048
#         imagePullPolicy: Always
#         name: app-2048
#         ports:
#         - containerPort: 80
